create datalogger file

--- a/data_nini/Untitled.ipynb
+++ b/data_nini/Untitled.ipynb
@@ -24,7 +24,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import nibabel as nib\n",
+    "import skimage.io as io\n",
+    "import numpy as np\n",
+    "img=nib.load('SMIR.Brain.XX.O.CT_Tmax.346010.nii')\n",
+    "img_arr=img.get_fdata()\n",
+    "img_arr=np.squeeze(img_arr)\n",
+    "io.imshow(img_arr)"
+   ]
   }
  ],
  "metadata": {
